apps/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: keycloak
  selector:
    app.kubernetes.io/name: keycloak
